Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.

2024-01-11:

- Fixed ancient incorrect behaviour in the 'kill' built-in: it sent SIGCONT
  to the given process along with every other non-SIGCONT signal issued,
  causing a stopped process to be incorrectly resumed upon sending it any
  signal and causing any SIGCONT trap handler to be incorrectly triggered.

2024-01-05:

- Fixed a potential crash on pressing Ctrl+C on the command line while
  history expansion (the -H or histexpand option) is active.

2024-01-01:

- Release 1.0.8.

2023-12-28:

- Fixed intermittent incorrect behaviour (a race condition), introduced on
  2023-09-15, that occurred on some systems when running an external command
  with a redirection from a command substitution.

- Fixed an init-time crash on failure to trim the shell command history file
  due to a non-writable parent directory; ksh now prints a warning instead.

2023-12-25:

- Fixed a regression in the behavior of 'exit' in a trap action, introduced
  on 2020-09-09. The default exit status, used when no argument is given to
  'exit', is now once again the exit status of the last command executed
  *before* the trap action, as expected.

2023-09-16:

- The 'kill' built-in command was meant to refuse to issue SIGSTOP to the
  shell's process if the shell is a login shell (because this normally
  causes an unrecoverable freeze of the terminal session). The code
  prohibiting this did not work on modern systems and is now fixed.

2023-09-15:

- Release 1.0.7.

- Fixed a hang in command substitutions (introduced in 93u+m/1.0.0) that was
  triggered when redirecting standard output within a command substitution,
  in combination with other factors. E.g., the following no longer hangs:
	{ v=$(redirect 2>&1 1>&9); } 9>&1

2023-09-13:

- Fixed a crash on trying to append an indexed array value to an unset name
  reference, e.g.: nameref unsetref; unsetref+=(foo bar). This now produces